<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:checked="true"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_projects"
            android:title="@string/nav_projects" />
        <item
            android:id="@+id/nav_wx"
            android:title="@string/nav_wx" />
    </group>

    <item android:title="@string/nav_others">
        <menu>
            <item
                android:id="@+id/nav_notes"
                android:title="@string/nav_notes" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/nav_about" />
        </menu>
    </item>
</menu>